2000-03-09  Kjartan Maraas  <kmaraas@online.no>

	* es/translate-gnome-es.sgml: Added Spanish translation
	of the translation doc.
	* es/update-es.sh: Added file.
	
2000-02-20  Richard Hult  <rhult@hem.passagen.se>

	* sv/ordlista.html: removed headers so that the file could be
	* <!--included

2000-02-20 Kjartan Maraas  <kmaraas@online.no>

	* translate-gnome.sgml: Added guide to translating gnome
	programs.
	
2000-02-20  Richard Hult  <rhult@hem.passagen.se>

	* Added sv directory with info for the Swedish translation team.

2000-02-20  Kjartan Maraas  <kmaraas@online.no>

	* Added this module to keep things specific to
	i18n work. For example dictionaries for different teams
	etc. Each team could use this as a base for storing
	stuff they want to share between themselves or with
	the other teams.