@@ -1,3 +1,7 @@
+2000-04-02  Robert Brady  <rwb197@zepler.org>
+
+	* en_GB/en_GB.pl: The script to translate to British.
+
 2000-03-09  Kjartan Maraas  <kmaraas@online.no>
 
 	* es/translate-gnome-es.sgml: Added Spanish translation
